2005-05-26 Benoit Grégoire  <bock@step.polymtl.ca>
	* Someone moved the fallback gettext functions definition (for when gettext isn't installed) inside the static setCurrentLocale method, completely breaking the system when PHP doesn't have gettext support.  This is an untested fix.
	
2005-05-24 Francois Proulx <francois.proulx@gmail.com>
	* Fixed bug in auth.php to let users go through when the click twice on the login button
	* Fixed bug in hotspot_log.php
	
2005-05-24 Francois Proulx <francois.proulx@gmail.com>
	* Added "Get access statistics" button to Node admin to get hotspot specific stats
	* Added search box in Users log to get a specific user stats quickly
	
2005-05-24 Francois Proulx <francois.proulx@gmail.com>
	* Fixed typo in some translations
	* Cleaned-up todos
	
2005-05-18 Francois Proulx <francois.proulx@gmail.com>
	* Added strip_tags in RssPreview ( some malformed HTML would break the page layout )
	
2005-05-16 Francois Proulx <francois.proulx@gmail.com>
	* Changed login message in MainUI to make it clearer what the login button will do

2005-05-13 Philippe April <philippe@ilesansfil.org>
	* Added deployment status to node_list

2005-05-11 Francois Proulx <francois.proulx@gmail.com>
	* Began writing user profiles
	* Added many methods to User class
	* Added node quota fields in DB ( bandwidth, throttling ...)

2005-05-10 Francois Proulx <francois.proulx@gmail.com>
	* Fixed Login link in signup page ( MainUI.php ) if the Session has gw_id, gw_address, gw_port 
	  show physical login link
	  
2005-05-10 Francois Proulx <francois.proulx@gmail.com>
	* Added download button CSS class to style button
	
2005-05-10 Francois Proulx <francois.proulx@gmail.com>
	* Fixed wrong method name in File.php
	* Added strip tags to Langstring
	* Basic styling of content_admin table
	
2005-05-04 Francois Proulx <francois.proulx@gmail.com>
	* Fixed serialization issue ( flickr)
2005-05-04 Francois Proulx <francois.proulx@gmail.com>
	* Improved caching