@@ -1,3 +1,10 @@
+2005-05-27 Francois Proulx <francois.proulx@gmail.com>
+	* Changed the signup process to make it smoother for users
+		* The user will automatically be granted the 15 minutes if he's signing up at a real hotspot
+		* If the user closes his browser during the 15 minutes and loses its session, we will regenerate it
+	* Added big red message to the top of the portal page, warning user to validate as soon as possible
+	* Fixed translation typos
+
 2005-05-26 Benoit Grégoire  <bock@step.polymtl.ca>
 	* Someone moved the fallback gettext functions definition (for when gettext isn't installed) inside the static setCurrentLocale method, completely breaking the system when PHP doesn't have gettext support.  This is an untested fix.
 	
